fix: fix case sensitivity

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run mlflow project
         run: |
-          mlflow run MLproject
+          mlflow run MLProject
             - name: Save mlruns to repo
 
       - name: Save mlruns to repo
