fix: attempt to fix run id

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run mlflow project
         run: |
-          mlflow run MLProject --env-manager=local
+          python MLProject/modelling.py
 
       - name: Save mlruns to repo
         uses: stefanzweifel/git-auto-commit-action@v7
