--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Build Docker Model
         run: |
+          cd MLProject
           mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "abalone"
 
       - name: Login to Docker Hub
